RESOLVED FIXED192757
[Web Animations] Ensure we don't update an animation's finished state twice when updating animations
https://bugs.webkit.org/show_bug.cgi?id=192757
Summary [Web Animations] Ensure we don't update an animation's finished state twice w...
Antoine Quint
Reported 2018-12-17 08:38:43 PST
[Web Animations] Ensure we don't update an animation's finished state twice when updating animations
Attachments
Patch (3.40 KB, patch)
2018-12-17 08:42 PST, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2018-12-17 08:42:02 PST
Antoine Quint
Comment 2 2018-12-17 09:50:03 PST
Radar WebKit Bug Importer
Comment 3 2018-12-17 09:51:27 PST
Note You need to log in before you can comment on or make changes to this bug.